docs: updated github pages index page

--- a/asciidocs/docs/index.adoc
+++ b/asciidocs/docs/index.adoc
@@ -1,4 +1,37 @@
-= Index page
-ifndef::imagesdir[:imagesdir: images]
+= GitHub Actions Intro
+Arwed Schnalzenberger
+1.0.0, {docdate}
+:imagesdir: img
+:icons: font
+:sectnums:    // Nummerierung der Überschriften / section numbering
+// :toc:
+// :toclevels: 1
+:experimental:
+//https://gist.GitHub.com/dcode/0cfbf2699a1fe9b46ff04c41721dda74?permalink_comment_id=3948218
+ifdef::env-GitHub[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
 
-image::img.png[]
+
+== Übersicht
+
+
+
+== Gebrauch
+
+=== Ohne GitHub Actions
+
+
+=== Mit GitHub Actions
+
+
+== Alternativen
+
+
+== Quellen
+
+
