--- a/asciidocs/docs/getting-started.adoc
+++ b/asciidocs/docs/getting-started.adoc
@@ -151,7 +151,6 @@ Mitglieder benötigen Schreibberechtigungen, die unter `Settings > Access > Orga
 Wenn das Package lokal erstellt und auf öffentlich gesetzt werden kann, gehe zu dem jeweiligen Package, öffne die Package-Einstellungen und klicke unter "Manage Actions access" auf den Button "Add Repository". Füge dein Repository hinzu, damit es auf das Package zugreifen und es bearbeiten kann.
 
 
-
 == Weitere wichtige Umgebungsvariablen in den Workflows
 
 In den GitHub Actions Workflows (`build.yaml` und `release-artifacts.yaml`) werden verschiedene Umgebungsvariablen (`env`) verwendet, um die Pipeline-Anforderungen und die Projektkonfiguration zu steuern. Dazu gehören Variablen wie die Java-Version und die Java-Distribution, die für den Build und das Deployment festgelegt werden können. Beispiele dafür sind:
@@ -178,6 +177,11 @@ cat $HOME/.kube/config | base64
 ----
 
 Die Ausgabe dieses Kommandos muss dann in die GitHub Actions unter dem Namen `KUBE_CONFIG_DATA` hinzugefügt werden. Dadurch kann der Workflow auf die Konfigurationsdatei zugreifen und die notwendigen Berechtigungen für die Interaktion mit Leocloud bereitstellen.
+
+
+== Verwendung anderer Kubernetes-Deployments
+
+Neben der Leocloud-Plattform ist es auch möglich, andere Kubernetes-Deployments zu nutzen. Voraussetzung ist, dass die korrekte Konfigurationsdatei verwendet wird, die den Zugriff auf das entsprechende Kubernetes-Cluster ermöglicht. Achte darauf, dass alle erforderlichen Berechtigungen und Konfigurationen in der Datei korrekt angegeben sind.
 
 
 == Abschluss
